# jira-epic-healthchecker

./: .env.template  .gitignore  Cargo.toml
src/: collector.rs  database.rs  jira_client.rs  main.rs  models.rs  renderer.rs  time_graph.rs
src/routes/: issue_graph.rs  mod.rs  root.rs
