[package]
name = "jira-epic-healthchecker_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
rusqlite = "0.32.1"
serde = { version = "1.0.217", features = ["derive"] }
svg = "0.18.0"
thiserror = "1.0"
tokio = { version = "1.42.0", features = ["full"] }
tokio-rusqlite = "0.6.0"
dotenv = "0.15.0"
